--- a/core/templates/core/test_page.html
+++ b/core/templates/core/test_page.html
@@ -410,6 +410,8 @@
                                                     class="fas fa-globe"></i> Scrape All Sources</a></li>
                                         <li><a class="dropdown-item" href="#" onclick="viewSourceStatus()"><i
                                                     class="fas fa-info-circle"></i> Source Status</a></li>
+                                        <li><a class="dropdown-item" href="/analyze-source/"><i
+                                                    class="fas fa-robot"></i> Analyze New Source</a></li>
                                         <li>
                                             <hr class="dropdown-divider">
                                         </li>
