--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -42,6 +42,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'alerts' %}active{% endif %}" href="/alerts/">
+                                <i class="fas fa-bell me-1"></i> Alerts
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link {% if '/admin/' in request.path %}active{% endif %}" href="/admin/" target="_blank">
                                 <i class="fas fa-cogs me-1"></i> Admin Panel
                             </a>
