--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -28,12 +28,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% if request.resolver_match.url_name == 'test_page' or request.resolver_match.url_name == 'test' %}active{% endif %}" href="/test-page/">
-                                <i class="fas fa-flask me-1"></i> Test Center
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.resolver_match.url_name == 'analyze_source' %}active{% endif %}" href="/analyze-source/">
-                                <i class="fas fa-robot me-1"></i> Analyze Source
+                                <i class="fas fa-sitemap me-1"></i> Source Manager
                             </a>
                         </li>
                         <li class="nav-item">
